aux_source_directory(src TRADING-ALGORITHMS_SRC)

add_library(coincenter_trading-algorithms STATIC ${TRADING-ALGORITHMS_SRC})

target_link_libraries(coincenter_trading-algorithms PUBLIC coincenter_api-objects)
target_link_libraries(coincenter_trading-algorithms PUBLIC coincenter_objects)
target_link_libraries(coincenter_trading-algorithms PUBLIC coincenter_tech)
target_link_libraries(coincenter_trading-algorithms PUBLIC coincenter_trading-common)

target_include_directories(coincenter_trading-algorithms PUBLIC include)